--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,13 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-python-multipart==0.0.6 
+python-multipart==0.0.6
+
+# Test dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+
+# Linting dependencies
+flake8==6.1.0
+black==23.11.0 
