--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   REGION: us-central1
-  AR_REGION: us-central1
+  AR_REGION: us
   SERVICE_NAME: insight-agent
   REPOSITORY: insight-agent-repo
 
